bundled_metadata/force-app/main/default/objects/AssessmentTask/AssessmentTask.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>