bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
             <value>
                <fullName>Competitor Products</fullName>
            </value>
            <value>
                <fullName>Number of Displays</fullName>
            </value>
            <value>
                <fullName>Missing MSL (Distributed)</fullName>
            </value>
            <value>
                <fullName>Missing MSL (Available)</fullName>
            </value>
            <value>
                <fullName>Branded POS</fullName>
            </value>
            <value>
                <fullName>Combo Execution</fullName>
            </value>
            <value>
                <fullName>Cooler Removal</fullName>
            </value>
            <value>
                <fullName>Make Profitable Cooler</fullName>
            </value>
            <value>
                <fullName>Main PoG Compilance</fullName>
            </value>
            <value>
                <fullName>Main Space Share</fullName>
            </value>
            <value>
                <fullName>Menu Visibility</fullName>
            </value>
            <value>
                <fullName>digital Platform Visibility</fullName>
            </value>
            <value>
                <fullName>Secondary Space Compliance</fullName>
            </value>
            <value>
                <fullName>Carry Forward</fullName>
            </value>
            <value>
                <fullName>No time to execute</fullName>
            </value>
            <value>
                <fullName>Store conditions not suitable</fullName>
            </value>
            <value>
                <fullName>Manager unavailable</fullName>
            </value>
            <value>
                <fullName>Task does not apply</fullName>
            </value>
            <value>
                <fullName>Technical issue / connectivity problem</fullName>
            </value>
            <value>
                <fullName>Pepiris Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>