bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment Tasks</relationshipLabel>
    <relationshipName>Assessment_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>