bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/EUSFA_Execution_Method__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Execution_Method__c</fullName>
    <description>Execution method copied from the Assessment Task Definition at task creation. Used by the mobile app to determine whether to launch the IR camera or a manual audit module.</description>
    <inlineHelpText>How this task is executed: Manual or Image Recognition.</inlineHelpText>
    <label>Execution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Image Recognition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>