bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/EUSFA_Rejected__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field hold the Information that the Operational Task in Rejected Or Not.</description>
    <label>Rejected ?</label>
    <type>Checkbox</type>
</CustomField>