bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/EUSFA_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Rejection_Comments__c</fullName>
    <label>Rejection - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>