bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>ISO alpha 2 code for relevant country/market</description>
    <label>Market</label>
    <length>2</length>
    <type>Text</type>
</CustomField>