bundled_metadata/force-app/main/default/objects/AssessmentTask/fields/Task_type__c.field-meta.xml
<CustomField>
    <fullName>Task_type__c</fullName>
    <formula>TEXT(AssessmentTaskDefinition.Type__c)</formula>
    <label>Task type</label>
    <type>Text</type>
</CustomField>